urapolku home page/index.css
body {
    margin: 0px;
    background-color: #0B0121;
}
button:hover {
    cursor: pointer;
    opacity: 80%;
}
button {
    border: 2px solid white;
}
#navbar {
    display: flex;
    padding: 0px 24px;
    justify-content: center;
    align-items: flex-start;
    align-self: stretch;
    background: #0B0121;
    width: 100%;
}
.navbar-container {
    display: flex;
    width: 1200px;
    justify-content: center;
    align-items: center;
}
.navbar-content {
    display: flex;
    width: 1200px;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
}
.navbar-brand {
    display: flex;
    align-items: flex-start;
}
.logo-wrapper {
    display: flex;
    width: 138px;
    height: 22px;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
.logo {
    width: 133px;
    height: 22px;
    flex-shrink: 0;
    display: flex;
    gap: 3px;
}
.logo p {
    position: relative;
    top: -21px;
    color: #ECECEC;
    font-size: 22px;
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 700;
    line-height: 100%;
    letter-spacing: -0.66px;
    text-align: center;
    padding-bottom: 40px;
    vertical-align: top;
}
.logo img {
    display: inline-flex;
    width: 22px;
    height: 22px;
    align-items: flex-start;
    gap: 10px;
    flex-shrink: 0;
}
.navbar-menu {
    display: flex;
    align-items: center;
    gap: 32px;
}
.navbar-menu li {
    display: flex;
    padding: 24px 12px;
    align-items: flex-start;
    color: #ECECEC;
    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
}
.navbar-menu li a {
    color: #ECECEC;
    text-decoration: none;

}
.navbar-menu li a:hover {
    position: relative;
    top: -1px;
    border-bottom: 1px solid white;
}

.navbar-menu button {
    display: flex;
    padding: 8px 20px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border-radius: 50px;
    border: 2px solid #ECECEC;
}
.Register {
    background: #ECECEC;
}
.Login {
    background: none;
    color: #ECECEC;
}

#Hero-stack {
    display: flex;
    padding: 170px 20px 80px 20px;
    flex-direction: column;
    align-items: center;
    gap: 80px;
    align-self: stretch;
    background-image: url(gradient-image.jpg);
    background-position: -37.404px -3.244px;
    background-size: 105.195% 101.71%;
    background-repeat: no-repeat;
    background-color: lightgray;
  }
.Small-container {
    display: flex;
    width: 960px;
    flex-direction: column;
    align-items: center;
    gap: 80px;
}
.Title-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
    align-self: stretch;
}
.Pill {
    display: flex;
    padding: 9.905px 19.811px;
    align-items: flex-start;

    border-radius: 61.909px;
    border: 1.238px solid rgba(255, 255, 255, 0.30);
} .Pill p {
    color: #F2F4F8;
    text-align: center;
    font-size: 17.334px;
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
    margin: 0px;
}
.Content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
    align-self: stretch;
}
.Content h1 {
        display: flex;
        flex-direction: column;
        align-self: stretch;
        text-align: center;
        font-size: 80px;
        font-family: 'Montserrat', sans-serif;
        font-style: normal;
        font-weight: 500;
        line-height: 100%;
        letter-spacing: -2.4px;
        background-image: linear-gradient(to right, white, gray);
        -webkit-background-clip: text;
        -moz-background-clip: text;
        background-clip: text;
        color: transparent;
}
.Paragraph-wrapper {
    display: flex;
    width: 600px;
    justify-content: center;
    align-items: flex-start;
}
.Paragraph-wrapper p {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1 0 0;

    color: rgba(236, 236, 236, 0.65);
    text-align: center;
    font-size: 18px;
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 400;
    line-height: 160%;
}
.Actions {
    display: flex;
    padding-top: 16px;
    justify-content: center;
    align-items: flex-start;
    gap: 16px;
}
.Download {
    display: flex;
    padding: 12px 24px;
    justify-content: center;
    align-items: center;
    gap: 8px;

    border-radius: 60px;
    background: #ECECEC;
}
.Talk {
    display: flex;
    padding: 12px 24px;
    justify-content: center;
    align-items: center;
    align-self: stretch;

    border-radius: 60px;
    background: none;
    color: #ECECEC;
}
#Content {
    display: flex;
    height: 425px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 24px;
    align-self: stretch;
}
.Video {
    width: 1105px;
    height: 453px;
    flex-shrink: 0;
    border-radius: 69px;

}
#Middle-section {
    display: flex;
    padding: 0px 20px;
    flex-direction: column;
    align-items: center;
    gap: 80px;
    align-self: stretch;
}
.Middle-section-title {
    display: flex;
    width: 470px;
    padding: 24px 0px;
    flex-direction: column;
    align-items: center;
    gap: 24px;
}
.Middle-title-wrapper {
    display: flex;
    width: 500px;
    padding: 10px;
    justify-content: center;
    align-items: flex-start;
    gap: 10px;
}
.Middle-title-wrapper h2 {
    display: flex;
    flex-direction: column;
    flex: 1 0 0;

    color: #ECECEC;
    text-align: center;
    font-size: 48px;
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 500;
    line-height: 120%;
    letter-spacing: -0.32px;
}
/* ... */

